12-Task-Manager-Microservices/ingress-nginx.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress
  namespace: task-manager
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
       paths:
         - path: /task-manager
           pathType: Prefix
           backend:
             service:
               name: frontend-services
               port:
                 number: 80
